v2/examples/kubernetes/osprey/service.yml
apiVersion: v1
kind: Service
metadata:
  name: @ospreyService@
  namespace: @namespace@
spec:
  ports:
  - name: osprey
    protocol: TCP
    port: @ospreyPort@
    targetPort: @ospreyPort@
    nodePort: @ospreyNodePort@
  selector:
    app: @ospreyApp@
  type: NodePort
